Fix margins on small screen

--- a/Styles/buttons.css
+++ b/Styles/buttons.css
@@ -37,3 +37,7 @@
   transition: background-color 0.5s ease;
   color: var(--color-text-black-light);
 }
+
+.btn-contact {
+  margin-right: 10px;
+}
