--- a/Styles/responsiveness.css
+++ b/Styles/responsiveness.css
@@ -145,20 +145,23 @@
   .btn {
     margin: 1rem 0 0 0;
   }
+  .btn-contact {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 400px) {
   .swiper-button {
     top: 100%;
   }
-  .attraction__label {
-    width: 100%;
+  .attraction_labels {
+    justify-content: center !important;
   }
   #showcase-section btn {
     display: block;
   }
   .map-responsive {
-    padding-bottom: 70%;
+    padding-bottom: 100%;
   }
   .contact-info {
     width: 90%;
@@ -175,5 +178,9 @@
   }
   .room-card__type {
     font-size: 0.7em;
+  }
+  .img-container img:nth-child(1),
+  .img-container img:nth-child(3) {
+    display: none;
   }
 }
